# calmarion_heat1d

./: .gitignore  CLAUDE.md  MIGRATION_REPORT.md  README.md  pyproject.toml
.claude/agents/: fortran-jax-translator.md  vectorization-reviewer.md
.claude/commands/: plan.md
.claude/hooks/: vectorization_checker.py
.claude/rules/: scientific-computing.md  testing.md
.claude/skills/scientific-computing-migration/: SKILL.md
.claude/skills/scientific-computing-migration/references/: calculix-integration.md  fortran-to-python.md  inverse-problems.md  jax-patterns.md  stencil-patterns.md
.claude/skills/scientific-computing-migration/scripts/: numerical_validator.py
.claude/skills/scientific-computing-migration/templates/: heat1d.py
heat1d/src/: Makefile  init_mod.f90  params_mod.f90  simulation_mod.f90
heat1d_jax/src/heat1d/: __init__.py
scripts/: extract_reference_data.py
src/: heat1d  heat1d.f90  init_mod.mod  output_mod.f90  output_mod.mod  params_mod.mod  simulation_mod.mod
src/output/: history.csv  report.txt  solution_000000.csv  solution_000100.csv  solution_000200.csv  solution_000250.csv
src_jax/: __init__.py  heat1d.py  init.py  params.py  simulation.py
tests/: __init__.py  conftest.py  test_heat1d.py
tests/reference_data/: history_l2_errors.npy  history_max_errors.npy  history_steps.npy  history_times.npy  history_total_heat.npy  params.json  u_analytical_final.npy  u_final.npy  u_initial.npy  u_step100.npy
